<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuadraticEquationScreen">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/variableA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/variable_a_label"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/variableB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/variable_b_label"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/variableC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/variable_c_label"
                android:inputType="textShortMessage" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x1_0_x2_0_default_label" />

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/resolveEquation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResolveEquationClick"
            android:text="@string/resolve_equation_label"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/resetEquationResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResetFieldsClick"
            android:text="@string/clean_fields_label"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>