<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalaryScreen">

    <LinearLayout
        android:id="@+id/employeeDataResultsLayout"
        android:visibility="invisible"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary_list_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/salary_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:id="@+id/highestSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highest_salary_label" />

            <TextView
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:id="@+id/lowestSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowest_salary_label" />

            <TextView
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:id="@+id/salaryAbove300"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary_above_300_label" />

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCleanResultsClick"
                android:text="@string/clean_fields_label"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/employeeDataCollectorLayout"
        android:padding="25dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre completo" />

            <EditText
                android:id="@+id/employeeFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/full_name_hint_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worked_hours_label" />

            <EditText
                android:id="@+id/employeeHoursCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0"
                android:hint="@string/hours_number_hint_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rol_label" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/addEmployeeBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddNewEmployeeInfoClicks"
            android:text="@string/save_employee_btn_label"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/employeesCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_employees_registered_label" />

        <Button
            android:id="@+id/cleanEmployeesData"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCleanEmployeesData"
            android:text="@string/clean_fields_label"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/loadEmployeesData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onLoadEmployeesData"
            android:text="@string/load_employees_btn_label"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>