<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VotesScreen">

    <LinearLayout
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/vote_title_label" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/candidate1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onProceedVoteClick"
                android:text="C1"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/candidate2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onProceedVoteClick"
                tools:ignore="UsingOnClickInXml"
                android:text="C2" />

            <Button
                android:id="@+id/candidate3"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onProceedVoteClick"
                tools:ignore="UsingOnClickInXml"
                android:text="C3" />

            <Button
                android:id="@+id/candidate4"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onProceedVoteClick"
                tools:ignore="UsingOnClickInXml"
                android:text="C4" />
        </LinearLayout>

        <TextView
            android:id="@+id/votesResults"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..." />

        <Button
            android:id="@+id/resolveCandidateCount"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCountVotesClick"
            tools:ignore="UsingOnClickInXml"
            android:text="@string/count_votes_btn_label" />

        <Button
            android:id="@+id/cleanVotesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCleanVotesClick"
            tools:ignore="UsingOnClickInXml"
            android:text="@string/clean_fields_label" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>